[tool.poetry]
name = "python-zca-cakes"
version = "0.1.0"
description = ""
authors = ["Maksym Shalenyi <Maksym.Shalenyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"zope.interface" = "^5.4.0"
robotframework = "^5.0"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
